<resources>
    <string name="app_name">Shopping Cart 3</string>
    <string name="add_to_cart">Add to cart</string>
    <string name="remove_from_cart">Remove from cart</string>
    <string name="price">$%s</string>
    <string name="item_count_singular">%s item</string>
    <string name="item_count_plural">%s items</string>
    <string name="my_cart">My Cart</string>
    <string name="orders">Orders</string>
    <string name="submit_order">Submit order</string>
    <string name="empty_cart">Empty cart</string>
    <string name="view_all_orders">View all orders</string>
    <string name="back_to_cart">Back to cart</string>
    <string name="back_to_orders">Back to orders</string>
    <string name="total_price">Total price:</string>
    <string name="tax">Tax:</string>
    <string name="grand_total">Grand total:</string>
    <string name="zero_dollars">$0.00</string>
    <string name="order_details">Order Details</string>
</resources>