<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <TextView
        android:id="@+id/title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="25dp"
        android:text="@string/order_details"
        android:textAppearance="@style/TextAppearance.MaterialComponents.Headline4"
        app:layout_constraintBottom_toTopOf="@id/item_recycler"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/item_recycler"
        android:layout_width="0dp"
        android:layout_height="0dp"
        app:layout_constraintBottom_toTopOf="@id/back_to_cart_button"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/title" />

    <TextView
        android:id="@+id/total_price_label"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="5dp"
        android:text="@string/total_price"
        android:textAppearance="@style/TextAppearance.MaterialComponents.Body2"
        app:layout_constraintBottom_toTopOf="@id/tax_label"
        app:layout_constraintEnd_toStartOf="@id/total_price"
        app:layout_constraintHorizontal_bias="0"
        app:layout_constraintStart_toEndOf="@id/glv50"
        app:layout_constraintTop_toBottomOf="@id/item_recycler"
        app:layout_constraintVertical_bias="1" />

    <TextView
        android:id="@+id/total_price"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="5dp"
        android:gravity="end"
        android:text="@string/zero_dollars"
        android:textAppearance="@style/TextAppearance.MaterialComponents.Body2"
        app:layout_constraintBottom_toTopOf="@id/tax"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="1"
        app:layout_constraintStart_toEndOf="@id/total_price_label"
        app:layout_constraintTop_toBottomOf="@id/item_recycler" />

    <TextView
        android:id="@+id/tax_label"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="5dp"
        android:text="@string/tax"
        android:textAppearance="@style/TextAppearance.MaterialComponents.Body2"
        app:layout_constraintBottom_toTopOf="@id/grand_total_label"
        app:layout_constraintEnd_toStartOf="@id/tax"
        app:layout_constraintHorizontal_bias="0"
        app:layout_constraintStart_toEndOf="@id/glv50"
        app:layout_constraintTop_toBottomOf="@id/total_price_label" />

    <TextView
        android:id="@+id/tax"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="5dp"
        android:gravity="end"
        android:text="@string/zero_dollars"
        android:textAppearance="@style/TextAppearance.MaterialComponents.Body2"
        app:layout_constraintBottom_toTopOf="@id/grand_total"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="1"
        app:layout_constraintStart_toEndOf="@id/tax_label"
        app:layout_constraintTop_toBottomOf="@id/total_price_label" />

    <TextView
        android:id="@+id/grand_total_label"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="5dp"
        android:text="@string/grand_total"
        android:textAppearance="@style/TextAppearance.MaterialComponents.Body2"
        app:layout_constraintBottom_toTopOf="@id/back_to_orders_button"
        app:layout_constraintEnd_toStartOf="@id/grand_total"
        app:layout_constraintHorizontal_bias="0"
        app:layout_constraintStart_toEndOf="@id/glv50"
        app:layout_constraintTop_toBottomOf="@id/tax_label" />

    <TextView
        android:id="@+id/grand_total"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="5dp"
        android:gravity="end"
        android:text="@string/zero_dollars"
        android:textAppearance="@style/TextAppearance.MaterialComponents.Body2"
        app:layout_constraintBottom_toTopOf="@id/back_to_orders_button"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="1"
        app:layout_constraintStart_toEndOf="@id/grand_total_label"
        app:layout_constraintTop_toBottomOf="@id/tax_label" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/back_to_cart_button"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="25dp"
        android:layout_marginTop="0dp"
        android:layout_marginEnd="5dp"
        android:layout_marginBottom="25dp"
        android:text="@string/back_to_cart"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@id/glv50"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/grand_total_label"
        app:layout_constraintVertical_bias="1" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/back_to_orders_button"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="5dp"
        android:layout_marginTop="0dp"
        android:layout_marginEnd="25dp"
        android:layout_marginBottom="25dp"
        android:text="@string/back_to_orders"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@id/glv50"
        app:layout_constraintTop_toBottomOf="@id/item_recycler"
        app:layout_constraintVertical_bias="1" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/glv50"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:orientation="vertical"
        app:layout_constraintGuide_percent=".5" />
</androidx.constraintlayout.widget.ConstraintLayout>